--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
-
+    <script>
+      tailwind.config = {
+        darkMode: "class",
+        plugins: [require("daisyui")],
+      };
+    </script>
     <style>
       /* Sistema de tarjetas cuadradas - CORRECCIÓN CON MEJORES PRÁCTICAS */
       .square-card {
